# vitsGPT

./: .gitignore  DUMMY5  LICENSE  README.md  pyproject.toml  reference.bib  requirements.txt  requirements_all.txt  requirements_vitsgpt.txt  survey.md  vscode_extension.md
about_espnet/: eval.sh  mfa_format_bk.py  run_bk.sh  validate_data_dir_bk.sh
baseline_demos/: fast_pitch.py  fast_speech2.py
berts/: 1009.sh  check_embedding.py  get_embedding.sh  get_embedding1.sh  get_embedding_cls.py  get_embedding_phone.py  get_embedding_text.py
berts/examples/: bert_base_uncased_cls.py  bert_base_uncased_seq.py  bert_x_phone.py
datasets/: README.md  count_LJSpeech.py  download_EmoV_DB.sh  download_LibriTTS.sh  downsample_VCTK.sh  preprocess_EmoV_DB_bea_1.sh  preprocess_EmoV_DB_bea_2.py  preprocess_EmoV_DB_bea_filter.py  preprocess_LibriTTS_1.sh  preprocess_LibriTTS_filter.py  preprocess_jsut_1.sh  preprocess_jsut_2.py
espnet debugging/: run_mfa_bk.sh
eval_espnet/: eval.sh
llama/: .gitignore  Notice  check_embedding.py  inference.sh  inference_ave.sh  inference_last.sh  inference_mat_phone.sh  inference_mat_text.sh  inference_pca.sh  inference_sentence.sh  inference_word.sh
llama/llama/: generation.py  model.py
vits/: .gitignore  check_audio.py  cp_ckpt.sh  delete_ckpt.py  requirements.txt  run_eval_emovdb.sh  run_eval_librif.sh  run_eval_ljs.sh  today_scripts.sh
vits/configs/: configs  emovdb_base.json  emovdb_base16.json  emovdb_bert_cls.json  emovdb_bert_cls16.json  emovdb_bert_phone.json  emovdb_bert_phone16.json  emovdb_bert_text.json  emovdb_sem_ave.json  (+56 more)
(+177 files in other folders)
